Manejo de excepciones y reformateo de codigo